Expose all actuator's services

--- a/hello_world_microservice/src/main/resources/bootstrap.properties
+++ b/hello_world_microservice/src/main/resources/bootstrap.properties
@@ -1,3 +1,5 @@
 spring.application.name=hello_world_microservice
 spring.profiles.active=dev
 spring.cloud.config.uri=http://localhost:8888
+
+management.endpoints.web.exposure.include=*
