--- a/configuration_service/src/main/resources/configs/hello_world_microservice/hello_world_microservice-dev.properties
+++ b/configuration_service/src/main/resources/configs/hello_world_microservice/hello_world_microservice-dev.properties
@@ -7,3 +7,9 @@ spring.datasource.url=jdbc:h2:file:~/hello_world_service_db
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+
+# Eureka discovery
+spring.cloud.config.enabled=true
+eureka.instance.prefer-ip-address=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
