Change foo_service name to foo-service (Feign problem)

--- a/configuration_service/src/main/resources/application.properties
+++ b/configuration_service/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=8888
 spring.profiles.active=native
-spring.cloud.config.server.native.search-locations=classpath:/configs/hello_world_microservice,classpath:/configs/foo_service
+spring.cloud.config.server.native.search-locations=classpath:/configs/hello_world_microservice,classpath:/configs/foo-service
