--- a/foo_service/src/main/resources/bootstrap.properties
+++ b/foo_service/src/main/resources/bootstrap.properties
@@ -1,3 +1,3 @@
-spring.application.name=foo_service
+spring.application.name=foo-service
 spring.profiles.active=dev
 spring.cloud.config.uri=http://localhost:8888
